# BiliBiliQ

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bilibiliq/: __init__.py  __main__.py  _auth.py  auth.py  exception.py  request.py  typing.py  utils.py
bilibiliq/grpc/: __init__.py
bilibiliq/grpc/dynamic/: __init__.py
bilibiliq/internal/: __init__.py  client.py
bilibiliq/internal/grpc/bilibili/ad/v1/: ad_pb2.pyi
bilibiliq/internal/grpc/bilibili/broadcast/v1/: broadcast_pb2.pyi  broadcast_pb2_grpc.py  laser_pb2.pyi  laser_pb2_grpc.py  mod_pb2.pyi  mod_pb2_grpc.py  push_pb2_grpc.py  room_pb2_grpc.py  test_pb2.pyi  test_pb2_grpc.py
bilibiliq/internal/grpc/bilibili/broadcast/v2/: laser_pb2_grpc.py
bilibiliq/internal/grpc/bilibili/dynamic/common/: dynamic_pb2.pyi
bilibiliq/internal/grpc/pgc/biz/: room_pb2.pyi
bilibiliq/internal/pb/bilibili/metadata/: metadata_pb2.py  metadata_pb2.pyi  metadata_pb2_model.py
bilibiliq/internal/pb/bilibili/pagination/: pagination_pb2.py  pagination_pb2.pyi  pagination_pb2_model.py
bilibiliq/internal/pb/bilibili/rpc/: status_pb2.py  status_pb2.pyi  status_pb2_model.py
bilibiliq/internal/pb/pgc/biz/: room_pb2.py  room_pb2.pyi  room_pb2_model.py
bilibiliq/rest/: __init__.py
bilibiliq/rest/message/: __init__.py  at.py  event.py  like.py  model.py  private_msg.py  reply.py  system_notify.py  type.py  utils.py
bilibiliq/rest/user/: __init__.py  model.py
examples/: message_listener.py
generator/: gen_pydantic.py  protos.py
(+335 files in other folders)
