[project]
name = "BiliBiliQ"
version = "0.1.0"
description = "Another BiliBili gRPC & REST API library"
authors = [
    {name = "MingxuanGame", email = "MingxuanGame@outlook.com"},
]
dependencies = [
    "grpcio>=1.50.0",
    "aiohttp[speedups]>=3.8.3",
    "rsa>=4.9",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
[project.optional-dependencies]
qrcode = ["qrcode[pil]>=7.3.1"]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.pyright]
exclude = ["bilibiliq/internal/pb", "bilibiliq/internal/grpc", "**/__pycache__", ".venv"]
venvPath = "."
venv = ".venv"

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pyright>=1.1.277",
    "flake8>=5.0.4",
    "isort>=5.10.1",
    "black>=22.10.0",
    "pre-commit>=2.20.0",
    "grpcio-tools>=1.50.0",
    "mypy-protobuf>=3.4.0",
]
